# SD

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  CODING_STYLE.md  DebugInfoLayer_8hpp.html  DebugInfoLayer_8hpp.js  DebugInfoLayer_8hpp__dep__incl.map  DebugInfoLayer_8hpp__dep__incl.md5  DebugInfoLayer_8hpp__incl.map  DebugInfoLayer_8hpp__incl.md5  DebugInfoLayer_8hpp_source.html  Dockerfile  EngineEvent_8hpp.html  EngineEvent_8hpp.js  EngineEvent_8hpp__dep__incl.map  EngineEvent_8hpp__dep__incl.md5  EngineEvent_8hpp_source.html  Entity_8hpp.html  Entity_8hpp.js  Entity_8hpp__incl.map  Entity_8hpp__incl.md5  Entity_8hpp_source.html  EventManager_8hpp.html  EventManager_8hpp.js  EventManager_8hpp__dep__incl.map  EventManager_8hpp__dep__incl.md5  EventManager_8hpp__incl.map  EventManager_8hpp__incl.md5  EventManager_8hpp_source.html  FileUtils_8hpp.html  FileUtils_8hpp.js  FileUtils_8hpp__dep__incl.map  FileUtils_8hpp__dep__incl.md5  FileUtils_8hpp__incl.map  FileUtils_8hpp__incl.md5  FileUtils_8hpp_source.html  (+492 more)
SD/: CMakeLists.txt  api-reference.md
SD/assets/shaders/: fragment.hlsl  vertex.hlsl  world.frag  world.vert
SD/config/: engine.toml
SD/include/: Application.hpp  ConfigLoader.hpp  GameContext.hpp  RuntimeStateManager.hpp  game.h
SD/include/Core/: Base.hpp  FrameTimer.hpp  GlfwContext.hpp  IdTypes.hpp  Layer.hpp  LayerList.hpp  LayoutManager.hpp  Logging.hpp  SDImGuiContext.hpp  SDImGuiViewport.hpp  Scene.hpp  SceneView.hpp  ShaderCompiler.hpp  View.hpp  ViewManager.hpp  Window.hpp  WindowManager.hpp  types.hpp
SD/include/Core/ECS/: Command.hpp  CommandQueue.hpp  Commands.hpp  Component.hpp  ComponentFactory.hpp  Components.hpp  Entity.hpp  EntityManager.hpp  SparseEntitySet.hpp  ViewImpl.hpp
SD/include/Core/Events/: Event.hpp  EventManager.hpp
SD/include/Core/Layers/: EngineDebugLayer.hpp  PerformanceLayer.hpp
SD/include/Core/Vulkan/: PipelineFactory.hpp  ShaderLibrary.hpp  VulkanConfig.hpp  VulkanContext.hpp  VulkanFramebuffer.hpp  VulkanRenderer.hpp  VulkanWindow.hpp
SD/include/Layers/: DebugInfoLayer.hpp  Shader2DLayer.hpp  TestLayer.hpp
SD/include/SD/: Application.hpp  GameContext.hpp  RuntimeStateManager.hpp  Vertex.hpp  arena.hpp  game.h  game_api.hpp  imgui_vla_config.h  profiler.hpp
SD/include/SD/core/: ApplicationRuntime.hpp  EngineServices.hpp  FrameTimer.hpp  GlfwContext.hpp  Layer.hpp  LayerList.hpp  LayerNode.hpp  LayoutManager.hpp  SDImGuiContext.hpp  SDImGuiViewport.hpp  Scene.hpp  SceneManager.hpp  SceneView.hpp  ShaderCompiler.hpp  View.hpp  ViewManager.hpp  Window.hpp  WindowManager.hpp  arena_vec.hpp  base.hpp  id_types.hpp  logging.hpp  math_utils.hpp  type_id.hpp  types.hpp
SD/include/SD/impl/: Application.inl
SD/include/SD/utils/: FixedString.hpp  file_utils.hpp  serialization.hpp  utils.hpp
SD/include/Utils/: FileUtils.hpp  Serialization.hpp  Utils.hpp
SD/include/core/: ApplicationRuntime.hpp  FrameTimer.hpp  GlfwContext.hpp  Layer.hpp  LayerList.hpp  LayoutManager.hpp  SDImGuiContext.hpp  SDImGuiViewport.hpp  Scene.hpp  SceneManager.hpp  SceneView.hpp  ShaderCompiler.hpp  View.hpp  ViewManager.hpp  Window.hpp  WindowManager.hpp  base.hpp  logging.hpp
SD/include/core/ecs/: Command.hpp  ComponentFactory.hpp  Entity.hpp  EntityManager.hpp  (+3 more)
SD/include/impl/: Application.inl
SD/include/utils/: file_utils.hpp  serialization.hpp  utils.hpp
SD/src/: Application.cpp  ConfigLoader.cpp  Entrypoint.cpp  HotReloader.cpp  RuntimeStateManager.cpp  arena.cpp  entrypoint.cpp  hot_reloader.cpp  internal.hpp
SD/src/Core/: IWYU_Test.cpp  LayoutManager.cpp  Logging.cpp  SDImGuiViewport.cpp  View.cpp  ViewManager.cpp  Window.cpp  WindowManager.cpp
SD/src/Layers/: Shader2DLayer.cpp  TestLayer.cpp
SD/src/core/: LayoutManager.cpp  SDImGuiViewport.cpp  SceneManager.cpp  ShaderCompiler.cpp  View.cpp  ViewManager.cpp  Window.cpp  WindowManager.cpp  logging.cpp
SDEngine/: CMakeLists.txt
SDEngine/assets/shaders/: changeTestPixel.hlsl  pixel.hlsl  pixel2.hlsl  vertex.hlsl
SDEngine/include/: Application.hpp  DebugInfoLayer.hpp  EngineEvent.hpp  Entrypoint.hpp  Event.hpp  EventManager.hpp  FileUtils.hpp  GlfwContext.hpp  ImGuiLayer.hpp  InputEvent.hpp  Layer.cpp  Layer.hpp  LayerList.hpp  Logging.hpp  MessageCallback.hpp  PerformanceLayer.hpp  ShaderCompiler.hpp  TestLayer.hpp  Utils.hpp  VulkanConfig.hpp  VulkanContext.hpp  Window.hpp
SDEngine/include/Core/: Base.hpp  Entity.hpp  EventManager.hpp  GlfwContext.hpp  Layer.hpp  LayerList.hpp  Logging.hpp  SDImGuiContext.hpp  SDImGuiViewport.hpp  Scene.hpp  SceneView.hpp  ShaderCompiler.hpp  View.hpp  VulkanConfig.hpp  VulkanContext.hpp  Window.hpp  types.hpp
SDEngine/include/Layers/: DebugInfoLayer.hpp  ImGuiLayer.hpp  PerformanceLayer.hpp  Shader2DLayer.hpp  TestLayer.hpp
SDEngine/include/Renderer/: Material.hpp  Mesh.hpp  Renderable.hpp  Shader.hpp  Texture.hpp  Vertex.hpp
SDEngine/include/Utils/: FileUtils.hpp  Utils.hpp
SDEngine/src/: Application.cpp  ImGuiLayer.cpp  Layer.cpp  TestLayer.cpp  VulkanContext.cpp  Window.cpp  main.cpp
SDEngine/src/Core/: Layer.cpp  Logging.cpp  SDImGuiViewport.cpp  VulkanContext.cpp  Window.cpp
SDEngine/src/Layers/: ImGuiLayer.cpp  Shader2DLayer.cpp  TestLayer.cpp
SDEngine/src/Renderer/: Vertex.cpp
SDPrototype/: CMakeLists.txt  main.cpp  main.txt
SDPrototype/assets/shaders/: pixel.hlsl  pixel_shader.h  vertex.hlsl  vertex.spv  vertex_shader.h
SandboxApp/: CMakeLists.txt  GameRenderLayer.cpp  GameRenderLayer.hpp  Logging.hpp  SDScratch.cpp  hotreload.toml  logging.hpp  main.cpp  sandbox.cpp
hot_reloader/: CMakeLists.txt
hot_reloader/src/: ConfigLoader.cpp  ConfigLoader.hpp  hot_reloader.cpp
proto/: CMakeLists.txt  test.cpp
sandbox_app/: CMakeLists.txt  GameRenderLayer.cpp  GameRenderLayer.hpp  hotreload.toml  logging.hpp  main.cpp  sandbox.cpp
testing/: CMakeLists.txt  SDScratch.cpp  TestECS.cpp
testing/tests/: CommandQueueTest.cpp  CommandQueueTests.cpp  ECSTests.cpp  FileSerializationTest.cpp  FileSerializationTests.cpp  ecs_tests.cpp  main.cpp
(+274 files in other folders)
